add boxes and fraction

--- a/practice.html
+++ b/practice.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <body style="width: max(650px, 100vw); height: max(490px, 100vh); display: flex; justify-content: center; align-items: center; flex-direction: row; margin: 0;">
   <canvas style="width: 640px; height: 480px; margin: 10px;" id="game"></canvas>
-  <object data="out.bin" type="application/octet-stream" id="sprite">
-  <script type="text/javascript" src="assets/practice.js"></script>
+  <img src="box.png" id="box" style="visibility: hidden;">
+  <script type="text/javascript" src="assets/out.js"></script>
 </body>
